--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
+    "styled-components": "^6.1.0",
+    "thunk": "^0.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
